# esp-eth-drivers

./: .gitignore  .gitlab-ci.yml  .idf_build_apps.toml  .idf_ci.toml  .pre-commit-config.yaml  .release-please-manifest.json  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  release-please-config.json  requirements.dev.txt  requirements.txt
.ci/: .codespellrc  .pylintrc  astyle-rules.yml  build_idf_dynamic_pipeline.yml  check_copyright_config.yaml  ci-component.yml  esp_idf_build_apps.toml  ignore_build_warnings.txt
adin1200/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
ch182/: CMakeLists.txt  README.md  idf_component.yml
ch390/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
ch390/examples/iperf/: CMakeLists.txt
ch390/examples/iperf/main/: CMakeLists.txt  Kconfig.projbuild  basic.c  basic.h  idf_component.yml  main.c
ch390/examples/tcp_server/: CMakeLists.txt
ch390/examples/tcp_server/main/: CMakeLists.txt  Kconfig.projbuild  basic.c  basic.h  idf_component.yml  main.c
ch390/include/: ch390.h  esp_eth_mac_ch390.h  esp_eth_phy_ch390.h
ch390/src/: esp_eth_mac_ch390.c  esp_eth_phy_ch390.c
ch390/test_apps/: pytest_ch390.py  sdkconfig.defaults
ch395/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
common_examples/: .build-test-rules.yml
dm9051/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
dp83640/: CMakeLists.txt  README.md  idf_component.yml
dp83848/: .build-test-rules.yml  CMakeLists.txt  README.md  idf_component.yml
enc28j60/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
enc28j60/include/: esp_eth_enc28j60.h
enc28j60/src/: enc28j60.h  esp_eth_mac_enc28j60.c  esp_eth_phy_enc28j60.c
eth_dummy_phy/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
eth_dummy_phy/examples/: .build-test-rules.yml
eth_dummy_phy/examples/generic_switch/: README.md
eth_dummy_phy/examples/generic_switch/main/: CMakeLists.txt  Kconfig.projbuild  generic_switch.c  idf_component.yml
eth_dummy_phy/examples/simple/: CMakeLists.txt  README.md  sdkconfig.defaults.clk_sink  sdkconfig.defaults.clk_source
eth_dummy_phy/examples/simple/main/: CMakeLists.txt  Kconfig.projbuild  emac2emac.c  idf_component.yml
eth_dummy_phy/include/: esp_eth_phy_dummy.h
eth_dummy_phy/src/: esp_eth_phy_dummy.c
eth_test_app/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  README.md  eth_test_runner.py  idf_component.yml
eth_test_app/include/: esp_eth_test_utils.h
eth_test_app/src/: esp_eth_test_apps.c  esp_eth_test_l2.c  esp_eth_test_utils.c
eth_test_app/test_apps_example/: README.md  pytest_ethernet.py
eth_test_app/test_apps_example/main/: idf_component.yml
ethernet_init/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  ethernet_init.c  ethernet_init.h  idf_component.yml
ip101/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
jl1101/: CMakeLists.txt  idf_component.yml
ksz80xx/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
ksz8851snl/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  idf_component.yml
ksz8863/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml  test_common.py  vm_test_app.py
ksz8863/components/ksz8863-cmd/: CMakeLists.txt  idf_component.yml  ksz8863_cmd.c  ksz8863_cmd.h
ksz8863/docs/: example_portmode.drawio  example_portmode_switch.drawio  example_switch.drawio  portmode.drawio  simpleswitch.drawio  switchmode.drawio
ksz8863/docs/test_board/bom/: esp32_ksz8863rll_test_board_bom.xls
ksz8863/examples/: .build-test-rules.yml
ksz8863/examples/ksz8863_console_ctrl/: CMakeLists.txt
ksz8863/examples/ksz8863_console_ctrl/main/: CMakeLists.txt  ksz8863_console_ctrl.c
ksz8863/examples/simple_switch/: CMakeLists.txt  README.md  pytest_simple_switch.py
ksz8863/examples/simple_switch/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  simple_switch_main.c
ksz8863/examples/switch_mode/: CMakeLists.txt  README.md  pytest_switch_mode.py  sdkconfig.defaults
ksz8863/examples/switch_mode/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  switch_main.c
ksz8863/examples/two_ports_mode/: CMakeLists.txt  README.md  pytest_two_ports_mode.py  sdkconfig.defaults
ksz8863/examples/two_ports_mode/main/: CMakeLists.txt  idf_component.yml  two_ports_main.c
ksz8863/include/: esp_eth_ksz8863.h  esp_eth_mac_ksz8863.h  esp_eth_netif_glue_ksz8863.h  esp_eth_phy_ksz8863.h  ksz8863.h  ksz8863_ctrl.h
ksz8863/src/: esp_eth_ksz8863.c  esp_eth_netif_glue_ksz8863.c  esp_eth_phy_ksz8863.c  esp_eth_pmac_ksz8863.c  ksz8863_ctrl.c  ksz8863_ctrl_internal.h
ksz8863/test_apps/: CMakeLists.txt  pytest_ksz8863.py  sdkconfig.defaults  vm_test_app.py
ksz8863/test_apps/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  ksz8863_console_cmd.c  ksz8863_console_cmd.h  test_apps.c  test_init_ksz8863.c  test_init_ksz8863.h
lan865x/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
lan865x/include/: esp_eth_mac_lan865x.h  esp_eth_phy_lan865x.h
lan865x/src/: esp_eth_mac_lan865x.c  lan865x_reg.h
lan867x/: .cz.yaml  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
lan86xx_common/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
lan87xx/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
phy_tester/: .build-test-rules.yml  CMakeLists.txt  README.md  conftest.py  eth_error_msg.py  idf_component.yml  pytest.ini  pytest_eth_phy.py  sdkconfig.defaults  test_eth_phy.py
rtl8201/: .build-test-rules.yml  CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
tools/: changelog.py  cz_bump.sh  idf_build_generate_child_pipeline.py  overwrite_component_path.py  (+2 more)
wiznet_common/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
wiznet_common/include/: wiznet_mac_common.h  wiznet_phy_common.h  wiznet_spi.h
wiznet_common/src/: wiznet_mac_common.c  wiznet_phy_common.c  wiznet_spi.c
(+186 files in other folders)
